2012-04-27 Ulf Behrens <ulf.behrens@cern.ch>
	* tag V01-06-63(b)
	* all public methods of ConfDB are synchronized now
	* addPSetForDatasets(), addPSetforStreams(): pset only added if not already existing

2012-04-26 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-62
	* fix to keep Description/Contacts field values in import and migration
	
2012-04-25 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-61
	* fix StringIndexOutOfBoundsException at VStringParameter.java

2012-04-25 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-60
	* update reconnect method (ConfDB.java).

2012-04-24 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-59
	* Improve reconnect method (ConfDB.java).
	
2012-04-24 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-58
	* Improve reconnect method (ConfDB.java).
	
2012-04-23 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-57
	* Update ConfCache (by Ulf).
	* Update PathStreamDataSetAssoc table definition at hlt_create_db_ORACLE.sql
	
2012-04-20 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-56
	* Changes in PrimaryDatasets editor:
	- Use Red and Blue colours for unassigned paths and paths already in the stream (also in "add path" list).
	- Two columns instead of three.
	* Embedded prescales editor 2px higher.  

2012-04-18 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-55
	* Fix bug: remove path from unassigned datasets.
	* Enables all possible paths and add red background for shared paths in Datasets Editor.
	* Shows all possible paths in the list to add paths to datasets. 
	
2012-04-18 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-54
	* Use TNS connections to export configurations. 

2012-04-16 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-53
	* fix small bug in re-labelling prescaler instance based on path name
