@@ -42,7 +42,6 @@ public class VInputTagParameter extends VectorParameter
 				   e.getMessage());
 	    }
 	}
-	isValueSet = (this.values.size()>0);
     }
     
     /** constructor from a string */
@@ -75,10 +74,8 @@ public class VInputTagParameter extends VectorParameter
     public String valueAsString()
     {
 	String result = new String();
-	if (isValueSet) {
-	    for (InputTag tag : values) result += tag.toString() + ", ";
-	    result = result.substring(0,result.length()-2);
-	}
+	for (InputTag tag : values) result += tag.toString() + ", ";
+	if (values.size()>0) result = result.substring(0,result.length()-2);
 	return result;
     }
 
@@ -87,7 +84,7 @@ public class VInputTagParameter extends VectorParameter
     {
 	values.clear();
 	if (valueAsString==null||valueAsString.length()==0) {
-	    isValueSet = false;
+	    return true;
 	}
 	else {
 	    try {
@@ -98,7 +95,6 @@ public class VInputTagParameter extends VectorParameter
 		    while (s.endsWith(" ")) s = s.substring(0,s.length()-1);
 		    values.add(new InputTag(s));
 		}
-		isValueSet = true;
 	    }
 	    catch (DataException e) {
 		System.err.println("VInputTagParameter.setValue ERROR: " +
@@ -138,7 +134,6 @@ public class VInputTagParameter extends VectorParameter
     public Object removeValue(int i)
     {
     	Object result = values.remove(i);
-	isValueSet = (values.size()>0);
 	return result;
     }
 
